Use flex boy styling to prevent element labels from overflowing, see #100

--- a/src/resources/LinkField.css
+++ b/src/resources/LinkField.css
@@ -8,15 +8,20 @@
 }
 
 .linkfield--field {
-  display: table;
+  display: flex;
+  flex-flow: row nowrap;
   width: 100%;
+  align-items: center;
+}
+.linkfield--type,
+.linkfield--target {
+  flex: 0 0 auto;
 }
 
-.linkfield--type,
-.linkfield--typeOptions,
-.linkfield--target {
-  display: table-cell;
-  vertical-align: middle;
+.linkfield--typeOptions {
+  overflow: hidden;
+  padding: 2px 0;
+  flex: 1;
 }
 
 .linkfield--target {
@@ -33,6 +38,9 @@
   padding-left: 0;
 }
 
+.linkfield--typeOption > .elementselect > .btn {
+  margin-top: 5px !important;
+}
 
 .linkfield--elementRow {
   display: flex;
